--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/sitemap": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
     "astro": "^3.0.12",
+    "astro-embed": "^0.5.1",
     "tailwindcss": "^3.0.24"
   }
 }
